<resources>
    <string name="app_name">My</string>
    <string name="searchBtn">Search</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="place_bet">Bet</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="delete">delete</string>
    <string name="bet_notification">Bet in 30 seconds</string>
    <string name="bet_after_notification">Bet after 30 seconds</string>
    <string name="lose">lose</string>
    <string name="won">You have won</string>
</resources>