<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dm_20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_enter"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:padding="@dimen/dm_20sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:text="@string/place_bet"
            />

        <TextView
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_0"
            android:gravity="center"
            android:textSize="@dimen/dm_20sp"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/delete"
            android:background="@color/white"
            android:contentDescription="@string/delete" />



    </LinearLayout>

</LinearLayout>